# ai_backend

./: .gitignore  Dockerfile  GOOGLE_OAUTH_CONFIG.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  check_env.py  docker-compose.yml  init_db.py  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  database.py  dependencies.py  main.py
app/ai/: agents.py  embeddings.py  llm.py  rag.py  tools.py
app/api/: deps.py
app/api/routes/: auth.py  chat.py  health.py  rag.py
app/core/: rate_limit.py  security.py  websocket.py
app/db/: base.py  crud.py  session.py
app/models/: __init__.py  base.py  chat.py  document.py  usage.py  user.py
app/routers/: auth.py  chat.py  documents.py
app/schemas/: chat.py  document.py  user.py
app/services/: agent_service.py  auth_service.py  chat_service.py  document_loader.py  embedding_service.py  enhanced_rag_service.py  faiss_service.py  guardrails_service.py  llm_service.py  oauth_service.py  prompt_service.py  rag_service.py  tool_service.py
app/utils/: file_utils.py  logger.py  security.py  text_splitter.py  tokens.py
app/vectorstore/: faiss_store.py  loader.py
docs/: API.md  ARCHITECTURE.md  GOOGLE_OAUTH_SETUP.md  LANGCHAIN_INTEGRATION.md  QUICK_START.md  SETUP.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Footer.jsx  Header.jsx  ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Chat.jsx  Login.jsx  Register.jsx  Upload.jsx
frontend/src/services/: api.js  authService.js  chatService.js  documentService.js
frontend/src/utils/: googleAuth.js
tests/: conftest.py  test_agent_service.py  test_llm_eval.py  test_rag_service.py
